--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <meta charset="utf-8" />
   <style>
    .code {font-family: "Courier New", Courier, monospace; background-color: #f5f5f5; font-weight: 300;}
    .center {margin-left: auto; margin-right: auto;}
