--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,8 @@
 
     <script type="text/x-mathjax-config">
        MathJax.Hub.Config({
-      tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}
+      tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]},
+      processEscapes: true
     });
    </script>
 
