--- a/src/index.html
+++ b/src/index.html
@@ -21,13 +21,10 @@
 
     <script type="text/x-mathjax-config">
        MathJax.Hub.Config(
-         ["resetEquationNumbers",MathJax.InputJax.TeX],
-         ["PreProcess",MathJax.Hub],
-         ["Reprocess",MathJax.Hub],
-         {
-      tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]},
-      processEscapes: true
-    });
+         { tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]},
+          processEscapes: true
+          }
+    );
    </script>
 
 <script src="../app.js"></script>
