Reconfigure as experimental MeenyLatex project

--- a/Demo/index.html
+++ b/Demo/index.html
@@ -57,7 +57,7 @@
     );
    </script>
 
-<script src="../app.js"></script>
+<script src="./app.js"></script>
 
   <script>
     var app = Elm.Main.fullscreen()
