It compiles wit 0.19!

--- a/Demo/index.html
+++ b/Demo/index.html
@@ -60,7 +60,12 @@
 <script src="./app.js"></script>
 
   <script>
-    var app = Elm.Main.fullscreen()
+    var app = Elm.Main.fullscreen(
+      {
+          width:  window.innerWidth,
+          height: window.innerHeight
+      }
+    )
 
       function typesetNow(){
         console.log("** typesetNow ... ")
