--- a/Demo/index.html
+++ b/Demo/index.html
@@ -60,10 +60,10 @@
 <script src="./app.js"></script>
 
   <script>
-    var app = Elm.Main.fullscreen(
+    var app = Elm.Main.embed(
       {
-          width:  window.innerWidth,
-          height: window.innerHeight
+          width:  1200,
+          height: 900
       }
     )
 
