- Add renderTester app to test Render2 module - Add pipeline to Render2 to process spacing and wire it into "render"

--- a/Demo/index.html
+++ b/Demo/index.html
@@ -3,9 +3,9 @@
 
   <meta charset="utf-8" />
 
-  <script type="text/javascript" async
-        src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML">
-  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/custom-elements/1.1.1/custom-elements.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+
 
   <style>
    .code {font-family: "Courier New", Courier, monospace; background-color: #f5f5f5; font-weight: 300;}
