--- a/Demo/index.html
+++ b/Demo/index.html
@@ -49,39 +49,80 @@
 
 <body>
     <div id="main"></div>
+<!--
+    <script type="text/x-mathjax-config">
+
+       MathJax.Hub.Config({tex2jax: {
+         TeX: { equationNumbers: {autoNumber: "AMS"}}
+         }
+       });
+
+
+    </script> -->
 
     <script type="text/x-mathjax-config">
        MathJax.Hub.Config(
          { tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]},
-          processEscapes: true
+          processEscapes: true,
+          TeX: { equationNumbers: {autoNumber: "AMS"}}
           }
     );
    </script>
 
 <script src="./app.js"></script>
 
-  <script>
-    var node = document.getElementById('main');
+<script>
+   var node = document.getElementById('main');
 
-    var app = Elm.Main.embed( node,  { width:  1200, height: 900 })
+   var app = Elm.Main.embed( node,  { width:  1200, height: 900 })
 
-    customElements.define('math-text', class extends HTMLElement {
-      get content() {
-        return this._content;
-      }
-      set content(value) {
-        console.log("A");
-        this._content = value;
-        this.textContent = this._content
-        MathJax.Hub.Queue(["Typeset", MathJax.Hub, this])
-      }
+   var typesetTimeout = null
+   var typesetQueue = []
+   function enqueueTypeset(el) {
+     typesetQueue.push(el)
+     clearTimeout(typesetTimeout)
+     typesetTimeout = setTimeout(function () {
+       var toTypeset = typesetQueue
+       MathJax.Hub.Queue(['Typeset', MathJax.Hub, typesetQueue], function (arg) {
+         toTypeset.forEach(function (el) { el.style.opacity = 1 })
+       })
+       typesetQueue = []
+     }, 1)
+   }
 
-      connectedCallback() {
-        console.log("B");
-        this.textContent = this._content
-        MathJax.Hub.Queue(["Typeset", MathJax.Hub, this])
-      }
-    })
+   var updateQueue = []
+   var updateTimeout = null
+   function enqueueUpdate(el) {
+     updateQueue.push(el)
+     clearTimeout(updateTimeout)
+     updateTimeout = setTimeout(function () {
+       MathJax.Hub.Queue(['Update', MathJax.Hub, updateQueue])
+       updateQueue = []
+     }, 0)
+   }
+
+   customElements.define('math-text', class extends HTMLElement {
+     get content() {
+       return this._content
+     }
+
+     set content(value) {
+       if (this._content === value) return
+       this._content = value
+       var jaxScript = this.querySelector('script')
+       if (!jaxScript) return
+       jaxScript.textContent = this._content
+       enqueueUpdate(this)
+     }
+
+     connectedCallback() {
+       this.textContent = this._content
+       this._connected = true
+       this.style.opacity = 0
+       this.style.display = 'inline'
+       enqueueTypeset(this)
+     }
+   })
 
 
   </script>
