--- a/renderTester/index.html
+++ b/renderTester/index.html
@@ -16,21 +16,55 @@
     // you can use ports and stuff here
     // you can use ports and stuff here
 
+    var typesetTimeout = null
+    var typesetQueue = []
+    function enqueueTypeset(el) {
+      typesetQueue.push(el)
+      clearTimeout(typesetTimeout)
+      typesetTimeout = setTimeout(function () {
+        var toTypeset = typesetQueue
+        MathJax.Hub.Queue(['Typeset', MathJax.Hub, typesetQueue], function (arg) {
+          toTypeset.forEach(function (el) { el.style.opacity = 1 })
+        })
+        typesetQueue = []
+      }, 1)
+    }
+
+    var updateQueue = []
+    var updateTimeout = null
+    function enqueueUpdate(el) {
+      updateQueue.push(el)
+      clearTimeout(updateTimeout)
+      updateTimeout = setTimeout(function () {
+        MathJax.Hub.Queue(['Update', MathJax.Hub, updateQueue])
+        updateQueue = []
+      }, 0)
+    }
+
     customElements.define('math-text', class extends HTMLElement {
       get content() {
-        return this._content;
+        return this._content
       }
+
       set content(value) {
-        this._content = value;
-        this.textContent = this._content
-        MathJax.Hub.Queue(["Typeset", MathJax.Hub, this])
+        if (this._content === value) return
+        this._content = value
+        console.log("SC: " + value)
+        var jaxScript = this.querySelector('script')
+        if (!jaxScript) return
+        jaxScript.textContent = this._content
+        enqueueUpdate(this)
       }
 
       connectedCallback() {
-        this.textContent = this._content
-        MathJax.Hub.Queue(["Typeset", MathJax.Hub, this])
+        this.textContent = '$$' + this._content + '$$'
+        this._connected = true
+        this.style.opacity = 0
+        this.style.display = 'block'
+        enqueueTypeset(this)
       }
     })
+    
   </script>
 </body>
 </html>
