Do not map > to &gt;, < to &lt; in Render2 verbatim environment.

--- a/Demo/index.html
+++ b/Demo/index.html
@@ -25,7 +25,7 @@
 .environment {margin-top: 1em; margin-bottom: 1em;}
 .strong {font-weight: bold}
 .subheading {margin-top: 0.75em; margin-bottom: 0.5em; font-weight: bold}
-.verbatim {margin-top: 1em; margin-bottom: 1em; font-size: 10pt;}
+.verbatim {font-size: 10pt;}
 td {padding-right: 10px;}
 
 a.linkback:link { color: white;}
