Update demo source texts

--- a/Demo/index.html
+++ b/Demo/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
-		<title>MeenyLatex Demo</title>
+		<title>MiniLatex Demo II</title>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/custom-elements/1.1.1/custom-elements.min.js"></script>
 		
 		<script type="text/x-mathjax-config">
