--- a/example/index.html
+++ b/example/index.html
@@ -11,7 +11,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
 
 
-	<title>Math + MarkDown (Experimental)</title>
+	<title>MiniLaTeX Example</title>
 
 	<!-- Style -->
 	<link rel="stylesheet" href="assets/style.css">
