--- a/Demo/public/index-remote.html
+++ b/Demo/public/index-remote.html
@@ -2,22 +2,22 @@
 <html>
 <head>
 
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
 
-	<!-- Load MathJax code -->
-	<script src="assets/custom-element-config.js"></script>
-	<script src="assets/math-text.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
+    <!-- Load MathJax code -->
+    <script src="assets/custom-element-config.js"></script>
+    <script src="assets/math-text.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
 
 
-	<title>Math + MarkDown (Experimental)</title>
+    <title>MiniLaTeX Demo</title>
 
-	<!-- Style -->
-	<link rel="stylesheet" href="assets/style.css">
+    <!-- Style -->
+    <link rel="stylesheet" href="assets/style.css">
 
-	<!-- Load app -->
-	<script src="Main.js" charset="utf-8"></script>
+    <!-- Load app -->
+    <script src="Main.min.js" charset="utf-8"></script>
 
 </head>
 
