--- a/Demo/public/index.html
+++ b/Demo/public/index.html
@@ -9,6 +9,7 @@
 	<script src="assets/custom-element-config.js"></script>
 	<script src="assets/math-text.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
+  	<!--  <script src="assets/mathjax/tex-chtml.js" id="MathJax-script"></script>-->
 
 
 	<title>MiniLaTeX Demo</title>
