--- a/example/index-katex.html
+++ b/example/index-katex.html
@@ -6,14 +6,11 @@
     <meta name="viewport" content="width=device-width" />
 
     <!-- Load KaTeX code -->
-    <script src="assets/custom-element-config.js"></script>
+    <script src="assets/elm-katex.js"></script>
     <script src="assets/math-text-katex.js"></script>
 
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css" integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
-    <script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.js" integrity="sha384-y23I5Q6l+B6vatafAwxRu/0oK/79VlbSz7Q9aiSZUvyWYIYsd+qj+o24G5ZU2zJz" crossorigin="anonymous"></script>
-    <script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/contrib/auto-render.min.js" integrity="sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI" crossorigin="anonymous"
-            onload="renderMathInElement(document.body);"></script>
 
     <title>MiniLaTeX Example</title>
 
@@ -46,6 +43,7 @@
 
 		var root = document.getElementById('main');
 		var app = Elm.Main.init({node: root, flags:  { seed: randInts[0], width:  1200, height: 900 }});
+        init(app);
 
 	 </script>
 
