Make MathJax rendering work for the lamdera example

--- a/example/index-lamdera.html
+++ b/example/index-lamdera.html
@@ -8,7 +8,7 @@
     <!-- Load MathJax code -->
     <script src="assets/elm-mathjax.js"></script>
 
-    <title>MiniLaTeX Example (Experimental)</title>
+    <title>MiniLaTeX Example (Lamdera)</title>
 
     <!-- Style -->
     <link rel="stylesheet" href="assets/style.css">
