--- a/example/index-katex.html
+++ b/example/index-katex.html
@@ -10,12 +10,11 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
 
-
     <!-- Fonts -->
-  
 
     <script defer src="https://cdn.jsdelivr.net/npm/webfontloader@1.6.28/webfontloader.js" integrity="sha256-4O4pS1SH31ZqrSO2A/2QJTVjTPqVe+jnYgOWUVr7EEc=" crossorigin="anonymous"></script>
-    <title>MiniLaTeX Example</title>
+
+    <title>MiniLaTeX Example (KaTeX)</title>
 
     <!-- Style -->
     <link rel="stylesheet" href="assets/style.css">
