--- a/example/index-katex2.html
+++ b/example/index-katex2.html
@@ -10,16 +10,26 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
 
-
+    <script>
+      window.WebFontConfig = {
+        custom: {
+          families: ['KaTeX_AMS', 'KaTeX_Caligraphic:n4,n7', 'KaTeX_Fraktur:n4,n7',
+            'KaTeX_Main:n4,n7,i4,i7', 'KaTeX_Math:i4,i7', 'KaTeX_Script',
+            'KaTeX_SansSerif:n4,n7,i4', 'KaTeX_Size1', 'KaTeX_Size2', 'KaTeX_Size3',
+            'KaTeX_Size4', 'KaTeX_Typewriter'],
+        },
+      };
+    </script>
 
     <script defer src="https://cdn.jsdelivr.net/npm/webfontloader@1.6.28/webfontloader.js" integrity="sha256-4O4pS1SH31ZqrSO2A/2QJTVjTPqVe+jnYgOWUVr7EEc=" crossorigin="anonymous"></script>
+
     <title>MiniLaTeX Example</title>
 
     <!-- Style -->
     <link rel="stylesheet" href="assets/style.css">
 
     <!-- Load app -->
-    <script src="Main.js" charset="utf-8"></script>
+    <script src="Main2.js" charset="utf-8"></script>
 
 </head>
 
@@ -43,7 +53,7 @@
 		const randInts = getRandomInts(5);
 
 		var root = document.getElementById('main');
-		var app = Elm.Main.init({node: root, flags:  { seed: randInts[0], width:  1200, height: 900 }});
+		var app = Elm.Main2.init({node: root, flags:  { seed: randInts[0], width:  1200, height: 900 }});
         init(app);
 
 	 </script>
