--- a/Demo/public/index-dual.html
+++ b/Demo/public/index-dual.html
@@ -8,7 +8,7 @@
     <!-- Load MathJax code -->
     <script src="assets/custom-element-config.js"></script>
     <script src="assets/mathjax-text.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml-full.js"></script>
 
     <!-- Load KaTeX code -->
     <script src="assets/elm-katex.js"></script>
